# SuperWater

./: .gitignore  README.md  environment.yml  plot_training.py  pyproject.toml  requirements-uv-cu118.txt  requirements.txt
docs/: RUNNING.md
examples/configs/: predict_4h0b.yaml
examples/data/single_4h0b/: 4h0b.cif
models/conf_dataset_clustered/: losses_epoch.csv  model_parameters.yml
models/large_dataset_filtered/: losses_epoch.csv  losses_iter.csv  model_parameters.yml
models/large_dataset_filtered_ddp/: losses_iter.csv  model_parameters.yml
models/large_pdbs_clustered/: losses_epoch.csv  losses_iter.csv  model_parameters.yml
models/large_pdbs_random/: model_parameters.yml
models/smoke_conf/: model_parameters.yml
models/smoke_score/: model_parameters.yml
scripts/: _tmp_conf_regen_train.sh  audit_dataset.py  benchmark_score_pr.py  build_smoke_dataset.py  fix_failed_entries.py  install.sh  install_uv.sh  prepare_bench62.py  run_val_sweep.sh  score_inference.py  setup_custom_dataset.py
splits/: combined_val_list.txt  conf_dataset_test.txt  conf_dataset_train.txt  conf_dataset_valid.txt  large_dataset_test.txt  large_dataset_train.txt  large_dataset_valid.txt  large_pdbs.txt  random_score_test.txt  random_score_train.txt  random_score_valid.txt
src/superwater/: embed.py  esm_embeddings.py  inference.py  organize_dataset.py  predict.py  structure_io.py  train.py
src/superwater/confidence/: candidates.py  dataset.py  train.py
src/superwater/datasets/: pdbbind.py  process_mols.py  structure_quality.py  water_quality.py
src/superwater/utils/: find_water_pos.py  parsing.py  training.py  utils.py
tests/: test_audit_dataset.py  test_io.py  test_organize_dataset.py  test_resume.py  test_water_quality.py
